Fixed .gitignore to include src folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
-<<<<<<< HEAD
+# Ignore target build outputs
 target/
-!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+# Ignore build folders
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+# IntelliJ IDEA
+.idea/
 *.iws
 *.iml
 *.ipr
 
-### Eclipse ###
+# Eclipse
 .apt_generated
 .classpath
 .factorypath
@@ -22,22 +23,20 @@ target/
 .springBeans
 .sts4-cache
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# VS Code
 .vscode/
 
-### Mac OS ###
+# Mac OS
 .DS_Store
-=======
+
+# Archives and binaries
 *.tar
 *.tar.*
 *.jar
@@ -50,6 +49,5 @@ build/
 *.log.*
 *.sig
 
+# Local packages
 pkg/
-src/
->>>>>>> 0ed1c00bd68554529b8c997048546424dfac233d
